--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,16 @@ services:
     networks:
         - mssample-network
 
+ proxy-service:
+    build: ./proxy-service
+    container_name: proxy
+    ports: 
+        - "9999:9999"
+    depends_on: 
+        - config-service
+    networks:
+        - mssample-network
+
 networks:
     mssample-network:
        driver: bridge
